--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,9 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
   }
 }
